--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,10 +36,13 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 
 
-
+#React Frontend URL
 login.link=http://localhost:3000/login
 password.reset.link=http://localhost:3000/reset-password?code=
 
+#Angular Frontend URL
+login.link=http://localhost:4200/login
+password.reset.link=http://localhost:4200/reset-password?code=
 
 
 
